# sleepeegpy

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  base.html  base.py  genindex.html  index.html  notebooks.html  objects.inv  pipeline.html  pipeline.py  py-modindex.html  pyproject.toml  requirements.txt  resample_cli.py  search.html  searchindex.js  sleepeegpy.base.BaseEventPipe.html  sleepeegpy.base.BaseHypnoPipe.html  sleepeegpy.base.BasePipe.html  sleepeegpy.base.SpectrumPlots.html  test.ipynb
_modules/: index.html
_sources/: api.rst.txt  base.rst.txt  index.rst.txt  pipeline.rst.txt  sleepeegpy.base.BaseEventPipe.rst.txt  sleepeegpy.base.BaseHypnoPipe.rst.txt  sleepeegpy.base.BasePipe.rst.txt  sleepeegpy.base.SpectrumPlots.rst.txt
base/: base.BasePipe.html  base.BaseSpectrum.html  sleepeeg.base.BaseEventPipe.html  sleepeeg.base.BaseHypnoPipe.html  sleepeeg.base.BasePipe.html  sleepeeg.base.BaseSpectrum.html  sleepeeg.base.BaseTopomap.html  sleepeeg.base.SleepSpectrum.html  sleepeeg.base.SpectrumPlots.html  sleepeegpy.base.BaseEventPipe.html  sleepeegpy.base.BaseHypnoPipe.html  sleepeegpy.base.BasePipe.html  sleepeegpy.base.SpectrumPlots.html
docs/: base.rst  conf.py  index.rst  notebooks.rst  pipeline.rst  requirements.txt
notebooks/: 0 complete pipeline.html  0_complete_pipeline.html  0_complete_pipeline.ipynb  1 cleaning.html  1 cleaning.ipynb  1_cleaning.html  1_cleaning.ipynb  2 ica.html  2 ica.ipynb  2_ica.html  2_ica.ipynb  3 dashboard.html  3 dashboard.ipynb  3_dashboard.html  3_dashboard.ipynb  4 spectral.html  4_spectral.html  4_spectral.ipynb  5 grand spectral.html  5 grand spectral.ipynb  5_grand spectral.html  5_grand spectral.ipynb  6 spindles.html  6 spindles.ipynb  6_spindles.html  6_spindles.ipynb  7 slow_waves.html  7 slow_waves.ipynb  7_slow_waves.html  7_slow_waves.ipynb  8 rems.html  8 rems.ipynb  8_rems.html  8_rems.ipynb  cleaning.ipynb  complete_pipeline.ipynb  dashboard.ipynb  dashboard_pipeline.ipynb  events.ipynb  grand.ipynb  (+5 more)
pipeline/: pipeline.CleaningPipe.html  pipeline.ICAPipe.html  pipeline.ResultsPipe.html  pipeline.py  sleepeeg.pipeline.CleaningPipe.html  sleepeeg.pipeline.GrandSpectralPipe.html  sleepeeg.pipeline.ICAPipe.html  sleepeeg.pipeline.REMsPipe.html  sleepeeg.pipeline.RapidEyeMovementsPipe.html  sleepeeg.pipeline.SlowWavesPipe.html  sleepeeg.pipeline.SpectralPipe.html  sleepeeg.pipeline.SpindlesPipe.html  sleepeegpy.pipeline.CleaningPipe.html  sleepeegpy.pipeline.GrandSpectralPipe.html  sleepeegpy.pipeline.ICAPipe.html  sleepeegpy.pipeline.RapidEyeMovementsPipe.html  sleepeegpy.pipeline.SlowWavesPipe.html  sleepeegpy.pipeline.SpectralPipe.html  sleepeegpy.pipeline.SpindlesPipe.html
sleepeeg/: base.py  (+3 more)
sleepeeg.base/: sleepeeg.base.BaseEventPipe.html  sleepeeg.base.BaseHypnoPipe.html  sleepeeg.base.BasePipe.html  sleepeeg.base.BaseSpectrum.html  sleepeeg.base.BaseTopomap.html
sleepeeg.pipeline/: sleepeeg.pipeline.CleaningPipe.html  (+5 more)
(+98 files in other folders)
