[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["notebooks"]  # empty by default

[project]
name = "sleepeeg"
version = "0.4.1"
authors = [
    {name = "Gennadiy Belonosov", email = "gennadiyb@mail.tau.ac.il"},
]
description = "Sleep EEG preprocessing and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ['sleep', 'eeg']
dependencies = [
    "attrs",
    "mne>=1.5.0",
    "mne-qt-browser",
    "pyqt5",
    "yasa==0.6.3",
    "fooof>=1.1.0rc2",
    "lspopt",
    "ipympl",
    "numpy",
    "pandas",
    "matplotlib>=3.8.0rc1",
    "scipy",
    "natsort",
    "more-itertools",
    "h5io",
    "loguru"
]

[project.urls]
Homepage = "https://github.com/NirLab-TAU/sleepeeg"
Documentation = "https://nirlab-tau.github.io/sleepeeg/"